Updated with website revision April 14, 2018.

--- a/www/the_book/12bot-tc.htm
+++ b/www/the_book/12bot-tc.htm
@@ -13,7 +13,7 @@ by C.E. Tatham<br>
 <a href="12bot-03.htm" target="upper"><b>3 - MY TWO NATURES</b></a><br>
 <a href="12bot-04.htm" target="upper"><b>4 - GOD'S POWER IN ME</b></a><br>
 <a href="12bot-05.htm" target="upper"><b>5 - BAPTISM and the LORD'S SUPPER</b></a><br>
-<a href="12bot-06.htm" target="upper"><b>6 - Be separate from the world</b></a><br>
+<a href="12bot-06.htm" target="upper"><b>6 - Be Separate from the World</b></a><br>
 <a href="12bot-07.htm" target="upper"><b>7 - HOW TO PRAY</b></a><br>
 <a href="12bot-08.htm" target="upper"><b>8 - The CHURCH and the BIBLE</b></a><br>
 <a href="12bot-09.htm" target="upper"><b>9 - PRIESTS who WORSHIP and SERVE</b></a><br>
