--- a/www/the_book/ps22n.htm
+++ b/www/the_book/ps22n.htm
@@ -24,7 +24,7 @@ There is no conflict between these suggested meanings, for both are true.
 <dt><b>&lt; 1 &gt;</b> The NT records seven sayings of Christ from the cross.
 <dd>All 7 can be found in this Psalm. They are marked in &lt;brackets&gt; as they occur. 
 <dd><a href="mat27.htm#46">&quot;Mat 27:46&quot;</a> (NT quotes of the Psalm are marked in quotation marks.) 
-<dt>my God- HB= Eli - {the first person possesive form of the name El}
+<dt>my God- HB= Eli - {the first person possessive form of the name El}
 <dd>'El' is the 'the Mighty God who is able to deliver.'
 <dd>For the One who cries out, He is more than that. He is 'My God.' 
 <dt>why hast Thou forsaken me? - His soul is torn in unbearable agony.
@@ -149,8 +149,7 @@ and cast lots upon my vesture. </b></i></dt><dl>
 for thou hast heard me from the horns of the unicorns. </b></i></dt><dl>
 <dt>save me from...- {HB= yasha, deliver, liberate}
 <dt>lion's mouth - Satan who would devour (cp. <a href="psa22.htm#13" target="lwr_lt">v.13</a>).
-<dt>unicorns - or, 'wild oxen,' refers to a now extinct but particularly powerful 
-<dd>and vicious beast. Their 'horns' refer to their destructive power.<dd>As used here, these terms are descriptive of Christ's enemies.
+<dt>unicorns - or, 'wild oxen,' refers to a now extinct but particularly powerful and vicious beast.<dd>Their 'horns' refer to their destructive power.<dd>Christ's enemies were powerful and intent upon His destruction.
 <dt>Thou hast heard...- &quot;Finally the assurance comes.&quot; [CHS] (see <a href="psa22.htm#24" target="lwr_lt">v.24</a>) 
 <dt><b>&lt; 5 &gt;</b> &quot;Father, into thy hands I commend my spirit.&quot; (<a href="luk23.htm#46">Luk 23:46</a>)</dl><dt>&nbsp;
 <dt><i><b>22:22 I will declare thy name unto my brethren:</b></i> </dt><dl>
