--- a/www/the_book/tent-08.htm
+++ b/www/the_book/tent-08.htm
@@ -6,16 +6,19 @@
 <center><h2>Christ in the Tabernacle</h2><h3>Typical Teaching of the Tabernacle</h3></center>
 <dl>
 <dt><b>8 - The Veil</b> - <br><dd>
-<a href="ex26.htm#31" target="lwr_lt">Ex 26:31-35</a>. The Veil was a hanging of blue, purple, scarlet, and fine twined linen, with the figures of the Cherubim embroidered upon it. It hung upon four pillars of shittim wood, which were overlaid with gold, and rested upon four sockets of silver. It separated the Most Holy Place from the Holy Place, shutting the priests out from the presence of Jehovah, and shut in His glory, which was revealed alone to the high priest once a year.<br>
-<br>The Veil of the Temple was rent [torn] in twain [two] from top to bottom when Christ died on the cross. <a href="mat27.htm#51">Mat 27:51</a><br>
-<br><b>For us,</b> the Veil is typical of ''the flesh'' of Christ. <a href="heb10.htm#20">Heb 10:20</a><br>
-<br>The body of flesh in which Jesus dwelt was the veil which shut in His glory as the only begotten Son of God. <a href="joh1.htm#14">Joh 1:14</a><br>
-<br>On the mount of transfiguration the veil became transparent, and the glory within shone through. <a href="mat17.htm#1">Mat 17:1-8</a>; <a href="2pet1.htm#16">2Pet 1:16-18</a><br>
-<br>When the flesh of Christ was rent [torn] on Calvary, the Veil of the Temple was rent, so that now, as priests, we may come boldly into the presence of our Father, into the Most Holy Place, and there behold the glory of God in the face of Jesus Christ. <a href="heb4.htm#16">Heb 4:16</a>; <a href="heb10.htm#19">10:19,20</a>; <a href="2cor4.htm#6">2Cor 4:6</a><br>
-<br>The Cherubim, types of us as one with Christ (see section on Cherubim) were rent when the Veil was rent. We were crucified with Christ, and until we know what it is to be ''dead unto sin,'' we will not be made ''alive unto God.'' <a href="rom6.htm#1">Rom 6</a>
-</dl><br>
+<a href="ex26.htm#31" target="lwr_lt">Ex 26:31-35</a>. The Veil was a hanging of blue, purple, scarlet, and fine twined linen, with the figures of the Cherubim embroidered upon it. It hung upon four pillars of shittim wood, which were overlaid with gold, and rested upon four sockets of silver. It separated the Most Holy Place from the Holy Place, shutting the priests out from the presence of Jehovah, and shut in His glory, which was revealed alone to the high priest once a year.<p>
+The Veil of the Temple was rent [torn] in twain [two] from top to bottom when Christ died on the cross. <a href="mat27.htm#51">Mat 27:51</a>
+</p><p>
+<b>For us,</b> the Veil is typical of ''the flesh'' of Christ. <a href="heb10.htm#20">Heb 10:20</a>
+</p><p>
+The body of flesh in which Jesus dwelt was the veil which shut in His glory as the only begotten Son of God. <a href="joh1.htm#14">Joh 1:14</a>
+</p><p>
+On the mount of transfiguration the veil became transparent, and the glory within shone through. <a href="mat17.htm#1">Mat 17:1-8</a>; <a href="2pet1.htm#16">2Pet 1:16-18</a>
+</p><p>
+When the flesh of Christ was rent [torn] on Calvary, the Veil of the Temple was rent, so that now, as priests, we may come boldly into the presence of our Father, into the Most Holy Place, and there behold the glory of God in the face of Jesus Christ. <a href="heb4.htm#16">Heb 4:16</a>; <a href="heb10.htm#19">10:19,20</a>; <a href="2cor4.htm#6">2Cor 4:6</a>
+</p><p>
+The Cherubim, types of us as one with Christ (see section on Cherubim) were rent when the Veil was rent. We were crucified with Christ, and until we know what it is to be ''dead unto sin,'' we will not be made ''alive unto God.'' <a href="rom6.htm#1">Rom 6</a></p></dl>
 <center>Proceed to the next section of this study: <a href="tent-09.htm" target="upper"><b>9 - The Boards</b></a><br><br>Return to the <a href="tent_tc.htm" target="lwr_lt"><b>Table of Contents for this study on the Tabernacle.</b></a><br><br></center>
-</dl>
 <hr width=60% align=center size=1>
 <center>This study can be accessed under <b>Book Notes</b> at <b>Exodus</b> chapter 25.</center>
 <center>Go to <a href="go_bible.htm" target="_top"><b>The Book</b></a> opening page.</center>
