--- a/www/the_book/tent-09.htm
+++ b/www/the_book/tent-09.htm
@@ -4,35 +4,59 @@
 <base target="lwr_rt"></head>
 <body bgcolor="#ffff80">
 <center><h2>Christ in the Tabernacle</h2><h3>Typical Teaching of the Tabernacle</h3></center>
-<dl>
-<dt><b>9 - The Boards</b> - <br><dd>
-<a href="ex26.htm#15" target="lwr_lt">Ex 26:15-30</a>. Forty-eight Boards of shittim wood ''standing up'' made the walls of the Tabernacle on the north and south sides, and the west end.<br>
-<br><b>Two silver sockets,</b> weighing about 100 pounds each, made a foundation for each Board to rest upon.<br>
-<br><b>Two tenons,</b> like hands, at the bottom of each Board set in the silver sockets, thus keeping each Board firmly in place on its foundation.<br>
-<br><b>Five bars</b> of shittim wood, overlaid with gold, kept the Boards in their proper position with reference to each other.<br>
-<br><b>The middle bar,</b> in the midst of the Boards, passed through from end to end. This bar was probably invisible, passing through the middle of each Board, from edge to edge. The four outer bars passed through rings of gold.<br>
-<br><b>A covering of gold</b> overlaid each Board and bar, thus hiding the knots and cross-grains.<br>
-<br><b>For us,</b> the typical meaning of the Boards is discovered in the Spirit given verses of <a href="eph2.htm#21">Eph 2:21,22</a>, <b>''a building fitly framed together''</b> that ''groweth into a holy temple in the Lord; in whom ye also are builded together for a habitation of God in the Spirit.''<br>
-<br>From these verses we learn that the Boards, as a part of God's dwelling, ''a building fitly framed together,'' are typical of the Church, God's dwelling place, ''a habitation of God in the Spirit.'' <a href="1cor6.htm#19">1Cor 6:19,20</a>; <a href="2cor6.htm#16">2Cor 6:16</a>; <a href="joh14.htm#23">Joh 14:23</a><br>
-<br><b>Every word</b> of God has significance, because His word has been inspired by the Holy Spirit, therefore, when the Spirit speaks twice of the Boards ''standing up,'' we ought to give heed. (<a href="ex26.htm#15">Ex 26:15</a>; <a href="ex36.htm#20">36:20</a>) The same blesed Spirit declares, that, as believers who are justified through faith in Christ, we also have ''access by faith into this grace wherein we <b>stand</b>.'' <a href="rom5.htm#2">Rom 5:2</a><br>
-<br>From these verses we learn that the Boards foreshadow <b>our standing before God in Christ, in heaven.</b><br>
-<br><b>The cutting down</b> of the Boards, as to their natural standing [when they were trees], typifies what God wrought for us in Christ, when he <b>crucified</b> the old man, and <b>buried</b> him together with Christ. <a href="rom6.htm#6">Rom 6:6,4</a><br>
-<br><b>The fitting</b> of the Boards for their place in the Tabernacle, by making each the same length, the same width, the same thickness, and overlaying each with gold, foreshadows what God did for us when He made us ''meet'', or fit, to be partakers of the inheritance of the saints in light. (<a href="col1.htm#12">Col 1:12</a>) This God did when He <b>quickened</b> us [ie., made us alive] together with Christ, and <b>raised us up</b> together with Him. <a href="eph2.htm#5">Eph 2:5,6</a><br>
-<br><b>The setting up</b> of each Board in its proper position is a most wonderful illustration of what God wrought for us in Christ when He <b>made us to sit</b> together with Him in the heavenly places, when He made us accepted in the Beloved. <a href="ex40.htm#1">Ex 40:1,2,18</a>; <a href="eph2.htm#6">Eph 2:6</a>; <a href="eph1.htm#6">1:6</a><br>
-<br><b>The putting in of the bars</b> typifies what God did for us in Christ, when He ''set the members each one of them in the body, even as it pleased Him.'' <a href="1cor12.htm#18">1Cor 12:18</a>; <a href="eph4.htm#4">Eph 4:4</a><br>
-<br><b>The middle</b> or <b>invisible bar</b> is a figure of the one Spirit by whom we were all baptized into one body. <a href="1cor12.htm#13">1Cor 12:13</a>; <a href="eph3.htm#6">Eph 3:6</a><br>
-<br><b>The four outer bars</b> suggest to us how God ''tempered the body together,'' or ''caused the several parts to combine into one organic structure,'' ''that there might be no disunion in the body, but that all the members might entertain the same anxious care for one another's welfare.'' (<a href="1cor12.htm#24">1Cor 12:24-25</a>; <a href="eph4.htm#11">Eph 4:11-16</a>) Our standing before God in Christ, with relation to each other, is manifest as we ''walk worthily of the calling wherewith we were called, with all <b>lowliness</b> and <b>meekness,</b> with <b>longsuffering, forbearing</b> one another in love; giving diligence to keep the <b>unity of the Spirit</b> in the bond of peace.'' <a href="eph4.htm#1">Eph 4:1-3</a> [RV]<br>
-<br><b>The foundation of silver,</b> on which the Boards rested, was made of the ransom, or atonement, money obtained from the men of war, who were numbered at mount Sinai. <a href="ex30.htm#11">Ex 30:11-16</a><br>
-<br><b>To us,</b> the silver is typical of the ''precious blood of Christ, as of a lamb without blemish and without spot,'' by which we have been redeemed. (<a href="1pet1.htm#18">1Pet 1:18,19</a>; <a href="act20.htm#28">Acts 20:28</a>) The only ground of our acceptance before a holy God is the precious blood of Christ, which cleanseth us from all sin. <a href="1joh1.htm#7">1Joh 1:7</a>; <a href="rom3.htm#21">Rom 3:21-26</a><br>
-<br><b>The two tenons,</b> or <b>hands,</b> which held the Boards securely on the foundation, are typical of the hand of our Saviour, and the hand of our Father, which hold, securely and forever, every true believer upon the Foundation, which is Christ and His finished work. (<a href="joh10.htm#27">Joh 10:27-29</a>; <a href="col3.htm#3">Col 3:3</a>) These are the loving, faithful, and mighty hands that keep every child of God in the place of favor before God, into which we were brought through the finished work of Christ. <a href="1joh5.htm#18">1Joh 5:18</a><br>
-<br><b>The two silver sockets</b> under each Board picture the death and resurrection of Christ, the only Foundation for our salvation. <a href="rom3.htm#24">Rom 3:24</a>; <a href="1cor15.htm#3">1Cor 15:3,4</a><br>
-<br><b>The one hundred silver sockets</b> foreshadow the multiplied, the perfect responsibility of Christ to uphold us in our standing before God. How blessedly He is able to save to the <b>uttermost, completely,</b> or <b>evermore,</b> them that come unto God through Him, seeing He ever liveth to make intercession for them. <a href="heb7.htm#25">Heb 7:25</a><br>
-<br><b>Ten cubits,</b> the height of the Boards, reveals the fact that we are responsible ''to walk worthily of the calling wherewith we were called,'' to walk ''as becometh saints,'' ''to walk as children of the light.'' (<a href="eph4.htm#1">Eph 4:1</a>; <a href="eph5.htm#2">5:2,3,8</a>) We are not to do this or that, in order to become saints, or in order to become children of light. <a href="eph1.htm#1">Ephesians ch. 1 to 3</a> reveal the glorious fact that God has blessed the Church in Christ, has made us one with Him and in Him, as members of His body, His bride, and <a href="eph4.htm#1">Ephesians ch. 4 to 6</a> tell us how we ought to live because of this standing which God has given us in Christ.<br>
-<br><b>The equal height, width, and thickness</b> of the Boards sweetly proclaim the precious truth that every believer has the same standing before God, for every member of Christ's body is accepted and blessed before God even as He is, for we are complete in Him, who is the Head of all principality and power. <a href="eph1.htm#3">Eph 1:3,6,22,23</a>; <a href="col2.htm#10">Col 2:10</a><br>
-<br>Like the people of Israel, shut out from the presence of God by the hangings of linen about the Court, we were all excluded from the presence of the holy God, because we had all sinned and come short of the glory of God. <a href="rom3.htm#23">Rom 3:23</a><br>
-<br>There was no difference as to our standing before God, as sinners, and every one who comes to God must come, and does come, through Jesus Christ, therefore there is <b>no difference</b> in our standing before God as saints.<br>
-<br><b>The covering of gold</b> on the Boards is typical of the divine glory that is ours in Christ, for when God glorified His Son, He glorified us in Him. <a href="joh17.htm#1">Joh 17:1,5,24</a>; <a href="act3.htm#13">Acts 3:13</a>; <a href="rom8.htm#30">Rom 8:30</a><br>
-<br>So many of God's dear ones do not understand the difference between <b>the standing</b> and <b>the state</b> of believers, and therefore are living under the Law, praying for mercy and blessing which are already theirs in Christ.<dl>
+<dl><dt><b>9 - The Boards</b> - <br><dd>
+<a href="ex26.htm#15" target="lwr_lt">Ex 26:15-30</a>. Forty-eight Boards of shittim wood ''standing up'' made the walls of the Tabernacle on the north and south sides, and the west end.<p>
+<b>Two silver sockets,</b> weighing about 100 pounds each, made a foundation for each Board to rest upon.
+</p><p>
+<b>Two tenons,</b> like hands, at the bottom of each Board set in the silver sockets, thus keeping each Board firmly in place on its foundation.
+</p><p>
+<b>Five bars</b> of shittim wood, overlaid with gold, kept the Boards in their proper position with reference to each other.
+</p><p>
+<b>The middle bar,</b> in the midst of the Boards, passed through from end to end. This bar was probably invisible, passing through the middle of each Board, from edge to edge. The four outer bars passed through rings of gold.
+</p><p>
+<b>A covering of gold</b> overlaid each Board and bar, thus hiding the knots and cross-grains.
+</p><p>
+<b>For us,</b> the typical meaning of the Boards is discovered in the Spirit given verses of <a href="eph2.htm#21">Eph 2:21,22</a>, <b>''a building fitly framed together''</b> that ''groweth into a holy temple in the Lord; in whom ye also are builded together for a habitation of God in the Spirit.''
+</p><p>
+From these verses we learn that the Boards, as a part of God's dwelling, ''a building fitly framed together,'' are typical of the Church, God's dwelling place, ''a habitation of God in the Spirit.'' <a href="1cor6.htm#19">1Cor 6:19,20</a>; <a href="2cor6.htm#16">2Cor 6:16</a>; <a href="joh14.htm#23">Joh 14:23</a>
+</p><p>
+<b>Every word</b> of God has significance, because His word has been inspired by the Holy Spirit, therefore, when the Spirit speaks twice of the Boards ''standing up,'' we ought to give heed. (<a href="ex26.htm#15">Ex 26:15</a>; <a href="ex36.htm#20">36:20</a>) The same blesed Spirit declares, that, as believers who are justified through faith in Christ, we also have ''access by faith into this grace wherein we <b>stand</b>.'' <a href="rom5.htm#2">Rom 5:2</a>
+</p><p>
+From these verses we learn that the Boards foreshadow <b>our standing before God in Christ, in heaven.</b>
+</p><p>
+<b>The cutting down</b> of the Boards, as to their natural standing [when they were trees], typifies what God wrought for us in Christ, when he <b>crucified</b> the old man, and <b>buried</b> him together with Christ. <a href="rom6.htm#6">Rom 6:6,4</a>
+</p><p>
+<b>The fitting</b> of the Boards for their place in the Tabernacle, by making each the same length, the same width, the same thickness, and overlaying each with gold, foreshadows what God did for us when He made us ''meet'', or fit, to be partakers of the inheritance of the saints in light. (<a href="col1.htm#12">Col 1:12</a>) This God did when He <b>quickened</b> us [ie., made us alive] together with Christ, and <b>raised us up</b> together with Him. <a href="eph2.htm#5">Eph 2:5,6</a>
+</p><p>
+<b>The setting up</b> of each Board in its proper position is a most wonderful illustration of what God wrought for us in Christ when He <b>made us to sit</b> together with Him in the heavenly places, when He made us accepted in the Beloved. <a href="ex40.htm#1">Ex 40:1,2,18</a>; <a href="eph2.htm#6">Eph 2:6</a>; <a href="eph1.htm#6">1:6</a>
+</p><p>
+<b>The putting in of the bars</b> typifies what God did for us in Christ, when He ''set the members each one of them in the body, even as it pleased Him.'' <a href="1cor12.htm#18">1Cor 12:18</a>; <a href="eph4.htm#4">Eph 4:4</a>
+</p><p>
+<b>The middle</b> or <b>invisible bar</b> is a figure of the one Spirit by whom we were all baptized into one body. <a href="1cor12.htm#13">1Cor 12:13</a>; <a href="eph3.htm#6">Eph 3:6</a>
+</p><p>
+<b>The four outer bars</b> suggest to us how God ''tempered the body together,'' or ''caused the several parts to combine into one organic structure,'' ''that there might be no disunion in the body, but that all the members might entertain the same anxious care for one another's welfare.'' (<a href="1cor12.htm#24">1Cor 12:24-25</a>; <a href="eph4.htm#11">Eph 4:11-16</a>) Our standing before God in Christ, with relation to each other, is manifest as we ''walk worthily of the calling wherewith we were called, with all <b>lowliness</b> and <b>meekness,</b> with <b>longsuffering, forbearing</b> one another in love; giving diligence to keep the <b>unity of the Spirit</b> in the bond of peace.'' <a href="eph4.htm#1">Eph 4:1-3</a> [RV]
+</p><p>
+<b>The foundation of silver,</b> on which the Boards rested, was made of the ransom, or atonement, money obtained from the men of war, who were numbered at mount Sinai. <a href="ex30.htm#11">Ex 30:11-16</a>
+</p><p>
+<b>To us,</b> the silver is typical of the ''precious blood of Christ, as of a lamb without blemish and without spot,'' by which we have been redeemed. (<a href="1pet1.htm#18">1Pet 1:18,19</a>; <a href="act20.htm#28">Acts 20:28</a>) The only ground of our acceptance before a holy God is the precious blood of Christ, which cleanseth us from all sin. <a href="1joh1.htm#7">1Joh 1:7</a>; <a href="rom3.htm#21">Rom 3:21-26</a>
+</p><p>
+<b>The two tenons,</b> or <b>hands,</b> which held the Boards securely on the foundation, are typical of the hand of our Saviour, and the hand of our Father, which hold, securely and forever, every true believer upon the Foundation, which is Christ and His finished work. (<a href="joh10.htm#27">Joh 10:27-29</a>; <a href="col3.htm#3">Col 3:3</a>) These are the loving, faithful, and mighty hands that keep every child of God in the place of favor before God, into which we were brought through the finished work of Christ. <a href="1joh5.htm#18">1Joh 5:18</a>
+</p><p>
+<b>The two silver sockets</b> under each Board picture the death and resurrection of Christ, the only Foundation for our salvation. <a href="rom3.htm#24">Rom 3:24</a>; <a href="1cor15.htm#3">1Cor 15:3,4</a>
+</p><p>
+<b>The one hundred silver sockets</b> foreshadow the multiplied, the perfect responsibility of Christ to uphold us in our standing before God. How blessedly He is able to save to the <b>uttermost, completely,</b> or <b>evermore,</b> them that come unto God through Him, seeing He ever liveth to make intercession for them. <a href="heb7.htm#25">Heb 7:25</a>
+</p><p>
+<b>Ten cubits,</b> the height of the Boards, reveals the fact that we are responsible ''to walk worthily of the calling wherewith we were called,'' to walk ''as becometh saints,'' ''to walk as children of the light.'' (<a href="eph4.htm#1">Eph 4:1</a>; <a href="eph5.htm#2">5:2,3,8</a>) We are not to do this or that, in order to become saints, or in order to become children of light. <a href="eph1.htm#1">Ephesians ch. 1 to 3</a> reveal the glorious fact that God has blessed the Church in Christ, has made us one with Him and in Him, as members of His body, His bride, and <a href="eph4.htm#1">Ephesians ch. 4 to 6</a> tell us how we ought to live because of this standing which God has given us in Christ.
+</p><p>
+<b>The equal height, width, and thickness</b> of the Boards sweetly proclaim the precious truth that every believer has the same standing before God, for every member of Christ's body is accepted and blessed before God even as He is, for we are complete in Him, who is the Head of all principality and power. <a href="eph1.htm#3">Eph 1:3,6,22,23</a>; <a href="col2.htm#10">Col 2:10</a>
+</p><p>
+Like the people of Israel, shut out from the presence of God by the hangings of linen about the Court, we were all excluded from the presence of the holy God, because we had all sinned and come short of the glory of God. <a href="rom3.htm#23">Rom 3:23</a>
+</p><p>
+There was no difference as to our standing before God, as sinners, and every one who comes to God must come, and does come, through Jesus Christ, therefore there is <b>no difference</b> in our standing before God as saints.
+</p><p>
+<b>The covering of gold</b> on the Boards is typical of the divine glory that is ours in Christ, for when God glorified His Son, He glorified us in Him. <a href="joh17.htm#1">Joh 17:1,5,24</a>; <a href="act3.htm#13">Acts 3:13</a>; <a href="rom8.htm#30">Rom 8:30</a>
+</p><p>
+So many of God's dear ones do not understand the difference between <b>the standing</b> and <b>the state</b> of believers, and therefore are living under the Law, praying for mercy and blessing which are already theirs in Christ.</p></dt><dl>
 <dt><b>Our standing</b> is what God has done <b>for</b> us in Christ, <b>justified</b> us, <b>sanctified</b> us, <b>glorified</b> us. <a href="rom8.htm#29">Rom 8:29,30</a>; <a href="1cor1.htm#30">1Cor 1:30</a>; <a href="heb10.htm#10">Heb 10:10,14</a><br>
 <dd><b>Our state</b> is what God works <b>in</b> us by His Spirit and word, as we believe and obey Him. <a href="eph3.htm#14">Eph 3:14-20</a>; <a href="php2.htm#13">Php 2:13</a>; <a href="col1.htm#29">Col 1:29</a><br>
 <dt><b>Our standing</b> is what God has made us in Christ, sons of God, kings, priests, heirs, joint-heirs, members of the bride of Christ. <a href="gal3.htm#26">Gal 3:26</a>; <a href="eph1.htm#5">Eph 1:5</a> [RV]; <a href="rev1.htm#6">Rev 1:6</a>; <a href="rom8.htm#17">Rom 8:17</a>; <a href="rom7.htm#4">7:4</a>; <a href="eph5.htm#30">Eph 5:30-32</a><br>
@@ -49,9 +73,8 @@
 <dd><b>Our state</b> is just how high we have grown up in all things in Christ. <a href="eph4.htm#14">Eph 4:14-16</a><br>
 <dt><b>Our standing</b> is just as perfect as Christ in all His purity and loveliness before God.<br>
 <dd><b>Our state,</b> alas! how unlike Him is the holiest saint on earth, therefore ''<b>this one thing I do,</b> forgetting the things which are behind,'' all past attainments, I stretch forward to the things which are before, ''confident of this very thing that He who began a good work in me will perfect it until the day of Jesus Christ.'' <a href="php3.htm#13">Php 3:13</a>; <a href="php1.htm#6">1:6</a> [RV]
-</dl></dl><br>
+</dl></dl>
 <center>Proceed to the next section of this study: <a href="tent-10.htm" target="upper"><b>10 - The Coverings</b></a><br><br>Return to the <a href="tent_tc.htm" target="lwr_lt"><b>Table of Contents for this study on the Tabernacle.</b></a><br><br></center>
-</dl>
 <hr width=60% align=center size=1>
 <center>This study can be accessed under <b>Book Notes</b> at <b>Exodus</b> chapter 25.</center>
 <center>Go to <a href="go_bible.htm" target="_top"><b>The Book</b></a> opening page.</center>
