--- a/www/the_book/tent-13.htm
+++ b/www/the_book/tent-13.htm
@@ -4,30 +4,44 @@
 <base target="lwr_rt"></head>
 <body bgcolor="#ffff80">
 <center><h2>Christ in the Tabernacle</h2><h3>Typical Teaching of the Tabernacle</h3></center>
-<dl>
-<dt><b>13 - The Table</b> - <br><dd>
-<a href="ex25.htm#23" target="lwr_lt">Ex 25:23-30</a>. <b>Food,</b> as well as light, was needed by Jehovah's priests who ministered in His presence, therefore He set a Table for them in His Sanctuary.<br>
-<br>His Table was made of shittim wood, two cubits long, a cubit wide, and a cubit and a half high, and overlaid with pure gold, hence the name 'pure Table.'<br>
-<br><b>Two crowns of gold</b> about it, with a hand-breadth of gold between, adorned the Table, and kept the small vessels and the loaves in place.<br>
-<br><b>Twelve loaves</b> of shewbread, or 'presence bread,' baked out of fine flour, were placed fresh upon the pure Table every Sabbath day, and the others [from the prior Sabbath] were eaten by the high priest and priests in the Holy Place. <a href="lev24.htm#5">Lev 24:5-9</a><br>
-<br>Coverings of blue, scarlet, and badgers' skins protected the Table and the bread, as Israel journeyed. <a href="num4.htm#7">Num 4:7-8</a><br>
-<br><b>For us,</b> the Table and bread foreshadow the provision our Father's love has made to nourish His priests in His presence today.<br>
-<br><b>The two crowns</b> of gold help us to discover the typical meaning of the Table, for they suggest at once the One whom we now see ''crowned with <b>glory and honor</b>.'' <a href="heb2.htm#9">Heb 2:9</a><br>
-<br>The shittim wood typifies Christ's humanity, the One ''who was made a little lower than the angels,'' while the pure gold is typical of His divine and heavenly glory, the glorified Son of Man.<br>
-<br>The twelve loaves, no doubt, like the twelve stones on the breast plate of the high priest, refer to the twelve tribes of Israel. In the continual shewbread, the memorial of Israel's acceptance before Jehovah, the whole nation was represented before the Lord. (<a href="lev24.htm#8">Lev 24:8</a>) He saw them as He sees the Church now, not as they were in themselves, but in Christ, representatively.<br>
-<br>The loaves, made of the fine flour, with the sweet-smelling frankincense upon them, resemble the meat-offering [meal-offering] of <a href="lev2.htm#1">Lev 2</a>, which is typical of Christ presenting Himself to God as food for man. It is Christ living and dying <b>for others,</b> but all as unto God, not to please men. But the loaves represent typically the Church in Christ, as upheld in the presence of God in heaven, by the One now crowned with glory and honor.<br>
-<br><b>The security</b> of the loaves, kept in place on the Table by the crowns and the handbreadth of gold, reveal typically the precious truth that, as His redeemed ones, we are kept acceptably in the presence of God by the hand of Christ, and by the hand of Him who crowned Jesus with glory and honor. <a href="joh10.htm#27">Joh 10:27-29</a><br>
-<br>The glory and honor given to Jesus Christ, are His as the One who was perfected through sufferings, that He might bring many sons unto glory. <a href="heb2.htm#9">Heb 2:9,10</a><br>
-<br>Our glorified and honored Saviour ever lives to keep in the place of acceptance, those whom God has accepted in Him, that is His Church. <a href="eph1.htm#6">Eph 1:6</a>; <a href="heb7.htm#25">Heb 7:25</a><br>
-<br>What our Lord is and what He has done for us, gives us our standing before God; and what He is and is doing for us now in glory, maintains us in that standing.<br>
-<br><b>The eating</b> of the shewbread, by the priests in the Holy Place, typifies the experience which we enjoy, as we live in fellowship, in the Spirit, with our Lord where He is, and realize, in the full assurance of faith, the blessed way we are upheld in Him and by Him before our Father.<br>
-<br>What food for our hearts to realize that our standing before God changes not, because the One in whom we are accepted, is the One whom God has glorified above all, and honored above every being in the universe. <a href="eph1.htm#18">Eph 1:18-22</a>; <a href="php2.htm#8">Php 2:8-11</a><br>
-<br>Priests thus nourished by His word and work have strength to serve before the Lord in behalf of others. Such dear ones are not trying to serve the Lord in their own poor weak way, hoping that in the end they may be saved by their faithfulness, but, assured from God's word that they are <b>saved by His grace, and kept by His faithfulness,</b> they can live, as becometh priests, a life of blessed service for others in His presence. <a href="eph2.htm#8">Eph 2:8-10</a><br>
-<br>When Israel journeyed in the wilderness, the loaves were placed on a blue cloth on the Table, and then covered with a scarlet cloth and over that a covering of badgers' skins.<br>
-<br>As heavenly people, who are yet in a place of testing, we overcome the evil one by the blood of the Lamb, and are protected from defilement in our walk by our humility, our absolute subjection to, and dependence upon, God. <a href="rev12.htm#11">Rev 12:11</a>; <a href="1pet5.htm#5">1Pet 5:5-7</a>
-</dl><br>
+<dl><dt><b>13 - The Table</b> - <br><dd>
+<a href="ex25.htm#23" target="lwr_lt">Ex 25:23-30</a>. <b>Food,</b> as well as light, was needed by Jehovah's priests who ministered in His presence, therefore He set a Table for them in His Sanctuary.<p>
+His Table was made of shittim wood, two cubits long, a cubit wide, and a cubit and a half high, and overlaid with pure gold, hence the name 'pure Table.'
+</p><p>
+<b>Two crowns of gold</b> about it, with a hand-breadth of gold between, adorned the Table, and kept the small vessels and the loaves in place.
+</p><p>
+<b>Twelve loaves</b> of shewbread, or 'presence bread,' baked out of fine flour, were placed fresh upon the pure Table every Sabbath day, and the others [from the prior Sabbath] were eaten by the high priest and priests in the Holy Place. <a href="lev24.htm#5">Lev 24:5-9</a>
+</p><p>
+Coverings of blue, scarlet, and badgers' skins protected the Table and the bread, as Israel journeyed. <a href="num4.htm#7">Num 4:7-8</a>
+</p><p>
+<b>For us,</b> the Table and bread foreshadow the provision our Father's love has made to nourish His priests in His presence today.
+</p><p>
+<b>The two crowns</b> of gold help us to discover the typical meaning of the Table, for they suggest at once the One whom we now see ''crowned with <b>glory and honor</b>.'' <a href="heb2.htm#9">Heb 2:9</a>
+</p><p>
+The shittim wood typifies Christ's humanity, the One ''who was made a little lower than the angels,'' while the pure gold is typical of His divine and heavenly glory, the glorified Son of Man.
+</p><p>
+The twelve loaves, no doubt, like the twelve stones on the breast plate of the high priest, refer to the twelve tribes of Israel. In the continual shewbread, the memorial of Israel's acceptance before Jehovah, the whole nation was represented before the Lord. (<a href="lev24.htm#8">Lev 24:8</a>) He saw them as He sees the Church now, not as they were in themselves, but in Christ, representatively.
+</p><p>
+The loaves, made of the fine flour, with the sweet-smelling frankincense upon them, resemble the meat-offering [meal-offering] of <a href="lev2.htm#1">Lev 2</a>, which is typical of Christ presenting Himself to God as food for man. It is Christ living and dying <b>for others,</b> but all as unto God, not to please men. But the loaves represent typically the Church in Christ, as upheld in the presence of God in heaven, by the One now crowned with glory and honor.
+</p><p>
+<b>The security</b> of the loaves, kept in place on the Table by the crowns and the handbreadth of gold, reveal typically the precious truth that, as His redeemed ones, we are kept acceptably in the presence of God by the hand of Christ, and by the hand of Him who crowned Jesus with glory and honor. <a href="joh10.htm#27">Joh 10:27-29</a>
+</p><p>
+The glory and honor given to Jesus Christ, are His as the One who was perfected through sufferings, that He might bring many sons unto glory. <a href="heb2.htm#9">Heb 2:9,10</a>
+</p><p>
+Our glorified and honored Saviour ever lives to keep in the place of acceptance, those whom God has accepted in Him, that is His Church. <a href="eph1.htm#6">Eph 1:6</a>; <a href="heb7.htm#25">Heb 7:25</a>
+</p><p>
+What our Lord is and what He has done for us, gives us our standing before God; and what He is and is doing for us now in glory, maintains us in that standing.
+</p><p>
+<b>The eating</b> of the shewbread, by the priests in the Holy Place, typifies the experience which we enjoy, as we live in fellowship, in the Spirit, with our Lord where He is, and realize, in the full assurance of faith, the blessed way we are upheld in Him and by Him before our Father.
+</p><p>
+What food for our hearts to realize that our standing before God changes not, because the One in whom we are accepted, is the One whom God has glorified above all, and honored above every being in the universe. <a href="eph1.htm#18">Eph 1:18-22</a>; <a href="php2.htm#8">Php 2:8-11</a>
+</p><p>
+Priests thus nourished by His word and work have strength to serve before the Lord in behalf of others. Such dear ones are not trying to serve the Lord in their own poor weak way, hoping that in the end they may be saved by their faithfulness, but, assured from God's word that they are <b>saved by His grace, and kept by His faithfulness,</b> they can live, as becometh priests, a life of blessed service for others in His presence. <a href="eph2.htm#8">Eph 2:8-10</a>
+</p><p>
+When Israel journeyed in the wilderness, the loaves were placed on a blue cloth on the Table, and then covered with a scarlet cloth and over that a covering of badgers' skins.
+</p><p>
+As heavenly people, who are yet in a place of testing, we overcome the evil one by the blood of the Lamb, and are protected from defilement in our walk by our humility, our absolute subjection to, and dependence upon, God. <a href="rev12.htm#11">Rev 12:11</a>; <a href="1pet5.htm#5">1Pet 5:5-7</a></p></dl>
 <center>Proceed to the next section of this study: <a href="tent-14.htm" target="upper"><b>14 - The Golden Altar</b></a><br><br>Return to the <a href="tent_tc.htm" target="lwr_lt"><b>Table of Contents for this study on the Tabernacle.</b></a><br><br></center>
-</dl>
 <hr width=60% align=center size=1>
 <center>This study can be accessed under <b>Book Notes</b> at <b>Exodus</b> chapter 25.</center>
 <center>Go to <a href="go_bible.htm" target="_top"><b>The Book</b></a> opening page.</center>
