--- a/www/the_book/tent-16.htm
+++ b/www/the_book/tent-16.htm
@@ -4,26 +4,36 @@
 <base target="lwr_rt"></head>
 <body bgcolor="#ffff80">
 <center><h2>Christ in the Tabernacle</h2><h3>Typical Teaching of the Tabernacle</h3></center>
-<dl>
-<dt><b>16 - The Mercy-Seat</b> - <br><dd>
-<a href="ex25.htm#17" target="lwr_lt">Ex 25:17-22</a>. The Mercy-seat was a lid of pure gold made to cover the Ark, and thus to cover the Law within. <a href="ex26.htm#34">Ex 26:34</a>; <a href="ex30.htm#6">30:6</a>; <a href="lev16.htm#13">Lev 16:13</a><br>
-<br>The blood of the bullock and goat was sprinkled upon the Mercy-seat by the high priest, once a year, on the great day of atonement. <a href="lev16.htm#14">Lev 16:14,15</a><br>
-<br>Above the Mercy-seat, between the Cherubim, Jehovah manifested His presence in the Most Holy Place. The Mercy-seat was thus His Throne, ''the throne of grace.'' <a href="heb4.htm#16">Heb 4:16</a><br>
-<br>Christ, as the Mercy-seat, is the One who has covered the Law, or satisfied all of its claims. The Law demanded of every man perfect obedience, or death.<br>
-<br>First, as the covering of pure gold, He satisfied all of the claims of the Law against Himself, as a man under the Law, by perfectly obeying it. <a href="gal4.htm#4">Gal 4:4</a><br>
-<br>Second, the blood on the Mercy-seat tells us that Christ by His death satisfied the demand of the Law against every sinner who will believe God's word. <a href="eze18.htm#4">Ezek 18:4</a>; <a href="rom6.htm#23">Rom 6:23</a>; <a href="rom5.htm#6">5:6</a><br>
-<br>For Israel, their sins were ''passed over,'' as well as the sins of every believer previous to the death of Christ, because of the blood-sprinkled Mercy-seat; but they were actually forgiven when laid upon Christ. His death was the anti-type, the fulfillment of all the Old Testament types of atonement for sin.<br>
-<br>It was of the utmost importance for Israel to have the Law covered by the Mercy-seat, for if uncovered, the wrath of the Law was visited upon a sinful people. An illustration of such an awful visitation of wrath, because of the uncovered Law, is when the men of Bethshemesh lifted up the Mercy-seat and looked into the Ark upon the holy Law, which could only bring death to the sinner. <a href="1sam6.htm#19">1Sam 6:19,20</a>; <a href="rom4.htm#15">Rom 4:15</a><br>
-<br>Oh, what mercy toward us as sinners, that Christ has satisfied fully, freely, and forever every claim of the holy Law of a holy God against us. <a href="heb10.htm#1">Heb 10:1-17</a><br>
-<br>Because God has righteously judged all of our sins through the death of Christ, He can proclaim eternal forgiveness to all them that obey Him, for the kind of faith that saves is the kind that obeys. <a href="heb5.htm#9">Heb 5:9</a>; <a href="heb9.htm#11">9:11,12</a>; <a href="jam2.htm#14">Jam 2:14-26</a><br>
-<br>''Grace reigns through righteousness,'' and Christ in the presence of God, as the One who died for us, is the One through whom God deals with every sinner who will believe His word. <a href="rom3.htm#24">Rom 3:24</a><br>
-<br>God looked not upon weak, helpless, and sinful Israel, but His eyes were continually upon the blood-sprinkled Mercy-seat; therefore, He could commune with the high priest, and thus with Israel as a nation through their representative.<br>
-<br>Through Christ, as the Mercy-seat, God can be a just God and a Saviour, because every claim of His holy Law against us is righteously satisfied. <a href="isa45.htm#21">Isa 45:21</a>; <a href="rom3.htm#26">Rom 3:26</a><br>
-<br>The publican's prayer, ''God be merciful to me, a sinner,'' is literally ''Oh God! be propitiated (Mercy-seated) to me, the sinner.''<br>
-<br>What a prayer was this! In substance it was, ''Oh God! do not look at me, the sinner, but look at the Mercy-seat; the blood is there atoning for my sin.'' There was confession, humiliation, repentance, faith, and ''that man went down to his house justified.'' <a href="luk18.htm#14">Luke 18:14</a>
-</dl><br>
+<dl><dt><b>16 - The Mercy-Seat</b> - <br><dd>
+<a href="ex25.htm#17" target="lwr_lt">Ex 25:17-22</a>. The Mercy-seat was a lid of pure gold made to cover the Ark, and thus to cover the Law within. <a href="ex26.htm#34">Ex 26:34</a>; <a href="ex30.htm#6">30:6</a>; <a href="lev16.htm#13">Lev 16:13</a><p>
+The blood of the bullock and goat was sprinkled upon the Mercy-seat by the high priest, once a year, on the great day of atonement. <a href="lev16.htm#14">Lev 16:14,15</a>
+</p><p>
+Above the Mercy-seat, between the Cherubim, Jehovah manifested His presence in the Most Holy Place. The Mercy-seat was thus His Throne, ''the throne of grace.'' <a href="heb4.htm#16">Heb 4:16</a>
+</p><p>
+Christ, as the Mercy-seat, is the One who has covered the Law, or satisfied all of its claims. The Law demanded of every man perfect obedience, or death.
+</p><p>
+First, as the covering of pure gold, He satisfied all of the claims of the Law against Himself, as a man under the Law, by perfectly obeying it. <a href="gal4.htm#4">Gal 4:4</a>
+</p><p>
+Second, the blood on the Mercy-seat tells us that Christ by His death satisfied the demand of the Law against every sinner who will believe God's word. <a href="eze18.htm#4">Ezek 18:4</a>; <a href="rom6.htm#23">Rom 6:23</a>; <a href="rom5.htm#6">5:6</a>
+</p><p>
+For Israel, their sins were ''passed over,'' as well as the sins of every believer previous to the death of Christ, because of the blood-sprinkled Mercy-seat; but they were actually forgiven when laid upon Christ. His death was the anti-type, the fulfillment of all the Old Testament types of atonement for sin.
+</p><p>
+It was of the utmost importance for Israel to have the Law covered by the Mercy-seat, for if uncovered, the wrath of the Law was visited upon a sinful people. An illustration of such an awful visitation of wrath, because of the uncovered Law, is when the men of Bethshemesh lifted up the Mercy-seat and looked into the Ark upon the holy Law, which could only bring death to the sinner. <a href="1sam6.htm#19">1Sam 6:19,20</a>; <a href="rom4.htm#15">Rom 4:15</a>
+</p><p>
+Oh, what mercy toward us as sinners, that Christ has satisfied fully, freely, and forever every claim of the holy Law of a holy God against us. <a href="heb10.htm#1">Heb 10:1-17</a>
+</p><p>
+Because God has righteously judged all of our sins through the death of Christ, He can proclaim eternal forgiveness to all them that obey Him, for the kind of faith that saves is the kind that obeys. <a href="heb5.htm#9">Heb 5:9</a>; <a href="heb9.htm#11">9:11,12</a>; <a href="jam2.htm#14">Jam 2:14-26</a>
+</p><p>
+''Grace reigns through righteousness,'' and Christ in the presence of God, as the One who died for us, is the One through whom God deals with every sinner who will believe His word. <a href="rom3.htm#24">Rom 3:24</a>
+</p><p>
+God looked not upon weak, helpless, and sinful Israel, but His eyes were continually upon the blood-sprinkled Mercy-seat; therefore, He could commune with the high priest, and thus with Israel as a nation through their representative.
+</p><p>
+Through Christ, as the Mercy-seat, God can be a just God and a Saviour, because every claim of His holy Law against us is righteously satisfied. <a href="isa45.htm#21">Isa 45:21</a>; <a href="rom3.htm#26">Rom 3:26</a>
+</p><p>
+The publican's prayer, ''God be merciful to me, a sinner,'' is literally ''Oh God! be propitiated (Mercy-seated) to me, the sinner.''
+</p><p>
+What a prayer was this! In substance it was, ''Oh God! do not look at me, the sinner, but look at the Mercy-seat; the blood is there atoning for my sin.'' There was confession, humiliation, repentance, faith, and ''that man went down to his house justified.'' <a href="luk18.htm#14">Luke 18:14</a></p></dl>
 <center>Proceed to the next section of this study: <a href="tent-17.htm" target="upper"><b>17 - The Cherubim</b></a><br><br>Return to the <a href="tent_tc.htm" target="lwr_lt"><b>Table of Contents for this study on the Tabernacle.</b></a><br><br></center>
-</dl>
 <hr width=60% align=center size=1>
 <center>This study can be accessed under <b>Book Notes</b> at <b>Exodus</b> chapter 25.</center>
 <center>Go to <a href="go_bible.htm" target="_top"><b>The Book</b></a> opening page.</center>
