--- a/www/the_book/tent-17.htm
+++ b/www/the_book/tent-17.htm
@@ -4,31 +4,41 @@
 <base target="lwr_rt"></head>
 <body bgcolor="#ffff80">
 <center><h2>Christ in the Tabernacle</h2><h3>Typical Teaching of the Tabernacle</h3></center>
-<dl>
-<dt><b>17 - The Cherubim</b> - <br><dd>
-<a href="ex25.htm#18" target="lwr_lt">Ex 25:18-22</a>. The two Cherubim, on the two ends of the Mercy-seat, were beaten work, of <b>one piece</b> of gold with the Mercy-seat.<br>
-<br>The faces of the Cherubim were toward one another, and toward the Mercy-seat, and their wings covered the Mercy-seat.<br>
-<br>Jehovah, the Holy One of Israel, the Saviour, dwelt in between the Cherubim, over the Mercy-seat.<br>
-<br><b>For us,</b> the key is not always easily found, which unlocks some of the priceless treasures in His word. Some gold nuggets are found on the surface, but these only indicate where the rich vein of pure gold lies, which is only opened up to the diligent digger.<br>
-<br>The description of the appearance of the Cherubim is given in <a href="eze1.htm">Ezekiel 1</a> and <a href="eze10.htm">10</a>. From <a href="eze10.htm#20">Ezek 10:20</a>, we learn that the Living Creatures and the Cherubim are the same. In <a href="rev4.htm">Revelation 4</a> and <a href="rev5.htm">5</a>, we read of four Beasts, or Living Creatures, like those seen by Ezekiel.<br>
-<br><b>The key verses,</b> which help us to know the typical significance of these Living Creatures, or Cherubim, are <a href="rev5.htm#8">Rev 5:8-10</a>. From these verses, we learn that the four Living Creatures, with the four and twenty Elders, represent symbolically, or typically His redeemed ones in glory, every blood-washed believer, every member of the Church of Christ, those who have been made kings and priests unto God. <a href="rev1.htm#4">Rev 1:4-6</a><br>
-<br><b>The oneness</b> of the Cherubim with the Mercy-seat typifies, oh so sweetly, our oneness with Christ in the glory which is now His at the right hand of the Majesty on high.<br>
-<br>The Cherubim were not fastened on the Mercy-seat, but were ''of one piece with it.'' Oh, how wonderful! When God glorified His own dear Son, who loved us and gave Himself for us, He glorified His Church, His Bride, in Him. (<a href="rom8.htm#30">Rom 8:30</a>; <a href="joh17.htm#5">Joh 17:5,22,24</a>) The exaltation of Christ, the Head, exalted the Body also. <a href="eph1.htm#18">Eph 1:18-23</a>; <a href="eph2.htm#1">2:1-6</a>; <a href="col1.htm#9">Col 1:9-18</a>; <a href="col2.htm#9">2:9-12</a><br>
-<br>What marvelous grace, what matchless glory, that God should give us such a standing in Christ.<br>
-<br><b>Beaten</b> out of the same piece of gold, <ul><li>One with Him in suffering, as well as one with Him in glory. <a href="rom8.htm#17">Rom 8:17</a>
+<dl><dt><b>17 - The Cherubim</b> - <br><dd>
+<a href="ex25.htm#18" target="lwr_lt">Ex 25:18-22</a>. The two Cherubim, on the two ends of the Mercy-seat, were beaten work, of <b>one piece</b> of gold with the Mercy-seat.<p>
+The faces of the Cherubim were toward one another, and toward the Mercy-seat, and their wings covered the Mercy-seat.
+</p><p>
+Jehovah, the Holy One of Israel, the Saviour, dwelt in between the Cherubim, over the Mercy-seat.
+</p><p>
+<b>For us,</b> the key is not always easily found, which unlocks some of the priceless treasures in His word. Some gold nuggets are found on the surface, but these only indicate where the rich vein of pure gold lies, which is only opened up to the diligent digger.
+</p><p>
+The description of the appearance of the Cherubim is given in <a href="eze1.htm">Ezekiel 1</a> and <a href="eze10.htm">10</a>. From <a href="eze10.htm#20">Ezek 10:20</a>, we learn that the Living Creatures and the Cherubim are the same. In <a href="rev4.htm">Revelation 4</a> and <a href="rev5.htm">5</a>, we read of four Beasts, or Living Creatures, like those seen by Ezekiel.
+</p><p>
+<b>The key verses,</b> which help us to know the typical significance of these Living Creatures, or Cherubim, are <a href="rev5.htm#8">Rev 5:8-10</a>. From these verses, we learn that the four Living Creatures, with the four and twenty Elders, represent symbolically, or typically His redeemed ones in glory, every blood-washed believer, every member of the Church of Christ, those who have been made kings and priests unto God. <a href="rev1.htm#4">Rev 1:4-6</a>
+</p><p>
+<b>The oneness</b> of the Cherubim with the Mercy-seat typifies, oh so sweetly, our oneness with Christ in the glory which is now His at the right hand of the Majesty on high.
+</p><p>
+The Cherubim were not fastened on the Mercy-seat, but were ''of one piece with it.'' Oh, how wonderful! When God glorified His own dear Son, who loved us and gave Himself for us, He glorified His Church, His Bride, in Him. (<a href="rom8.htm#30">Rom 8:30</a>; <a href="joh17.htm#5">Joh 17:5,22,24</a>) The exaltation of Christ, the Head, exalted the Body also. <a href="eph1.htm#18">Eph 1:18-23</a>; <a href="eph2.htm#1">2:1-6</a>; <a href="col1.htm#9">Col 1:9-18</a>; <a href="col2.htm#9">2:9-12</a>
+</p><p>
+What marvelous grace, what matchless glory, that God should give us such a standing in Christ.</p>
+<dd><b>Beaten</b> out of the same piece of gold...<ul><li>One with Him in suffering, as well as one with Him in glory. <a href="rom8.htm#17">Rom 8:17</a>
 <li>One with Him in death, and one with Him in life. <a href="rom6.htm#8">Rom 6:8</a>
 <li>One with Him in weakness, and one with Him in power. <a href="2cor13.htm#4">2Cor 13:4</a>; <a href="2cor12.htm#9">12:9,10</a>
-<li>One with Him in poverty, and one with Him in riches. <a href="2cor8.htm#9">2Cor 8:9</a>; <a href="eph3.htm#8">Eph 3:8</a>; <a href="rom8.htm#17">Rom 8:17</a></ul>
-<dd><b>The faces</b> of the Cherubim toward one another, foreshadow our attitude toward each other in glory, now enjoyed by all who live in His presence in the fulness of the Holy Spirit. This love for each other in Him is none other than His own love for us. <a href="joh13.htm#34">Joh 13:34</a>; <a href="rom15.htm#1">Rom 15:1-3</a>; <a href="php2.htm#1">Php 2:1-5</a>; <a href="php2.htm#19">2:19-21</a><br>
-<br><b>Selfishness,</b> self-exaltation, and every manifestation of the <b>self </b>life is the result of <b>sin,</b> and began with Satan, who said in his heart, ''<b>I will ascend</b> into heaven, <b>I will exalt</b> my throne above the stars of God, I will make myself like the Most High.'' <a href="isa14.htm#12">Isa 14:12-14</a>; <a href="eze28.htm#11">Ezek 28:11-17</a>; <a href="2the2.htm#4">2The 2:4</a><br>
-<br>The faces of the Cherubim ''toward the Mercy-seat,'' suggests that our hearts and minds will be occupied with our dear Lord above all else in heaven. His will, His pleasure, His glory <b>will be</b> the supreme ambition of our whole being, and <b>is now,</b> if our hearts are yielded to Him. <a href="2cor5.htm#9">2Cor 5:9</a>; <a href="col1.htm#10">Col 1:10,18</a><br>
-<br>Enthroned between the Cherubim was the One who said, ''Let them make me a sanctuary that I may dwell among them.'' (<a href="ex25.htm#8">Ex 25:8</a>) From thence He communed with the high priest, and from thence He ruled over Israel by revealing His will to the high priest.<br>
-<br>''He that dwelleth <b>in the secret place</b> of the Most High shall abide under the shadow of the Almighty.'' <a href="psa91.htm#1">Psa 91:1</a><br>
-<br><b>This secret place,</b> in the presence of the Most Holy One in the Most Holy Place, is the place where our Father <b>covers</b> us with His pinions, where He <b>guards</b> us from all evil, where He <b>gives</b> us <b>victory</b> over the enemy, where He <b>answers</b> our prayers, where He <b>honors</b> us, where He <b>satisfies</b> us, and where He <b>shows us His salvation.</b> <a href="psa91.htm#1">Psa 91</a><br>
-<br>The Living Creatures of Ezekiel 1 and Revelation 4 and 5, and the Seraphim of <a href="isa6.htm#1">Isaiah 6</a>, are intimately associated with the One on the throne. What pictures the Holy Spirit has given us thus of the joint-rule of Christ and His Church, those who are one with Him in life, those who are to be conformed to the image of His glory. <a href="rom8.htm#29">Rom 8:29</a>
-</dl><br>
+<li>One with Him in poverty, and one with Him in riches. <a href="2cor8.htm#9">2Cor 8:9</a>; <a href="eph3.htm#8">Eph 3:8</a>; <a href="rom8.htm#17">Rom 8:17</a></ul><dd>&nbsp;
+<dd><b>The faces</b> of the Cherubim toward one another, foreshadow our attitude toward each other in glory, now enjoyed by all who live in His presence in the fulness of the Holy Spirit. This love for each other in Him is none other than His own love for us. <a href="joh13.htm#34">Joh 13:34</a>; <a href="rom15.htm#1">Rom 15:1-3</a>; <a href="php2.htm#1">Php 2:1-5</a>; <a href="php2.htm#19">2:19-21</a>
+</p><p>
+<b>Selfishness,</b> self-exaltation, and every manifestation of the <b>self </b>life is the result of <b>sin,</b> and began with Satan, who said in his heart, ''<b>I will ascend</b> into heaven, <b>I will exalt</b> my throne above the stars of God, I will make myself like the Most High.'' <a href="isa14.htm#12">Isa 14:12-14</a>; <a href="eze28.htm#11">Ezek 28:11-17</a>; <a href="2the2.htm#4">2The 2:4</a>
+</p><p>
+The faces of the Cherubim ''toward the Mercy-seat,'' suggests that our hearts and minds will be occupied with our dear Lord above all else in heaven. His will, His pleasure, His glory <b>will be</b> the supreme ambition of our whole being, and <b>is now,</b> if our hearts are yielded to Him. <a href="2cor5.htm#9">2Cor 5:9</a>; <a href="col1.htm#10">Col 1:10,18</a>
+</p><p>
+Enthroned between the Cherubim was the One who said, ''Let them make me a sanctuary that I may dwell among them.'' (<a href="ex25.htm#8">Ex 25:8</a>) From thence He communed with the high priest, and from thence He ruled over Israel by revealing His will to the high priest.
+</p><p>
+''He that dwelleth <b>in the secret place</b> of the Most High shall abide under the shadow of the Almighty.'' <a href="psa91.htm#1">Psa 91:1</a>
+</p><p>
+<b>This secret place,</b> in the presence of the Most Holy One in the Most Holy Place, is the place where our Father <b>covers</b> us with His pinions, where He <b>guards</b> us from all evil, where He <b>gives</b> us <b>victory</b> over the enemy, where He <b>answers</b> our prayers, where He <b>honors</b> us, where He <b>satisfies</b> us, and where He <b>shows us His salvation.</b> <a href="psa91.htm#1">Psa 91</a>
+</p><p>
+The Living Creatures of Ezekiel 1 and Revelation 4 and 5, and the Seraphim of <a href="isa6.htm#1">Isaiah 6</a>, are intimately associated with the One on the throne. What pictures the Holy Spirit has given us thus of the joint-rule of Christ and His Church, those who are one with Him in life, those who are to be conformed to the image of His glory. <a href="rom8.htm#29">Rom 8:29</a></p></dl>
 <center>Proceed to the next section of this study: <a href="tent-18.htm" target="upper"><b>18 - The Priesthood</b></a><br><br>Return to the <a href="tent_tc.htm" target="lwr_lt"><b>Table of Contents for this study on the Tabernacle.</b></a><br><br></center>
-</dl>
 <hr width=60% align=center size=1>
 <center>This study can be accessed under <b>Book Notes</b> at <b>Exodus</b> chapter 25.</center>
 <center>Go to <a href="go_bible.htm" target="_top"><b>The Book</b></a> opening page.</center>
