--- a/www/the_book/tent-19.htm
+++ b/www/the_book/tent-19.htm
@@ -4,13 +4,13 @@
 <base target="lwr_rt"></head>
 <body bgcolor="#ffff80">
 <center><h2>Christ in the Tabernacle</h2><h3>Typical Teaching of the Tabernacle</h3></center>
-<dl>
-<dt><b>19 - Jehovah's Master Workman</b> - <br><dd>
-<a href="ex31.htm#1" target="lwr_lt">Ex 31:1-11</a>.  Before Moses came down from Mount Sinai with the plan of the Tabernacle and with the Law, the Lord appointed Bezaleel as a master workman to build the Tabernacle. To assist him, He appointed Oholiab, and every wisehearted one in Israel.<br>
-<br>Definite and clear commands were then given concerning the rest of the Sabbath, that Israel might be distinguished from the nations as God's peculiar people. <a href="ex31.htm#12" target="lwr_lt">Ex 31:12-18</a><br>
-<br>The Church, typified by the Tabernacle as God's dwelling, is being built by the Holy Spirit, God's Master Workman. (<a href="1cor12.htm#13">1Cor 12:13</a>; <a href="eph2.htm#19">Eph 2:19-22</a>; <a href="1pet2.htm#5">1Pet 2:5-7</a>) The Holy Spirit does this glorious work by the aid of the word of God, and by the aid of every wise-hearted and willing hearted believer. <a href="isa55.htm#11">Isa 55:11</a><br>
-<br>As co-workers with the Lord, used by the Holy Spirit to help build God's house, His Church, we are to cease from our own works, that God may work in us, for us, and through us the fulfillment [of] His plan, and thus have us enjoy <b>His rest.</b> <a href="1cor3.htm#9">1Cor 3:9-16</a>; <a href="heb4.htm#9">Heb 4:9,10</a>; <a href="1tim3.htm#15">1Tim 3:15</a>; <a href="heb3.htm#6">Heb 3:6</a>
-</dl><br>
+<dl><dt><b>19 - Jehovah's Master Workman</b> - <br><dd>
+<a href="ex31.htm#1" target="lwr_lt">Ex 31:1-11</a>.  Before Moses came down from Mount Sinai with the plan of the Tabernacle and with the Law, the Lord appointed Bezaleel as a master workman to build the Tabernacle. To assist him, He appointed Oholiab, and every wisehearted one in Israel.<p>
+Definite and clear commands were then given concerning the rest of the Sabbath, that Israel might be distinguished from the nations as God's peculiar people. <a href="ex31.htm#12" target="lwr_lt">Ex 31:12-18</a>
+</p><p>
+The Church, typified by the Tabernacle as God's dwelling, is being built by the Holy Spirit, God's Master Workman. (<a href="1cor12.htm#13">1Cor 12:13</a>; <a href="eph2.htm#19">Eph 2:19-22</a>; <a href="1pet2.htm#5">1Pet 2:5-7</a>) The Holy Spirit does this glorious work by the aid of the word of God, and by the aid of every wise-hearted and willing hearted believer. <a href="isa55.htm#11">Isa 55:11</a>
+</p><p>
+As co-workers with the Lord, used by the Holy Spirit to help build God's house, His Church, we are to cease from our own works, that God may work in us, for us, and through us the fulfillment [of] His plan, and thus have us enjoy <b>His rest.</b> <a href="1cor3.htm#9">1Cor 3:9-16</a>; <a href="heb4.htm#9">Heb 4:9,10</a>; <a href="1tim3.htm#15">1Tim 3:15</a>; <a href="heb3.htm#6">Heb 3:6</a></p></dl>
 <center>Proceed to the next section of this study: <a href="tent-20.htm" target="upper"><b>20 - Israel's Folly and Jehovah's Favor</b></a><br><br>Return to the <a href="tent_tc.htm" target="lwr_lt"><b>Table of Contents for this study on the Tabernacle.</b></a><br><br></center></dl>
 <hr width=60% align=center size=1>
 <center>This study can be accessed under <b>Book Notes</b> at <b>Exodus</b> chapter 25.</center>
