--- a/www/the_book/tent-20.htm
+++ b/www/the_book/tent-20.htm
@@ -4,19 +4,22 @@
 <base target="lwr_rt"></head>
 <body bgcolor="#ffff80">
 <center><h2>Christ in the Tabernacle</h2></center>
-<dl>
-<dt><b>20 - Israel's Folly and Jehovah's Favor</b> (Exodus 32-34) - <br><dd>
-<a href="ex32.htm#1" target="lwr_lt">Ex 32</a>. To save idolatrous Israel from the wrath of the uncovered Law, Moses interceded for them in the presence of Jehovah, before he descended from the mount, and then he broke the tables of the Law as he came down from His presence.<br>
-<br>Then Moses called for all who were on the Lord's side to come out to him, and all the sons of Levi gathered themselves together unto him, and turned away God's wrath from guilty Israel by slaying about three thousand men. <a href="num25.htm#10">Num 25:10-13</a><br>
-<br>The heart cry of Moses, as an intercessor, for Jehovah to forgive the sin of Israel, or blot out his name, because typical of Christ, resulted in God dealing with Israel on the ground of grace and not law. <a href="luk23.htm#34">Luke 23:34</a>; <a href="rom9.htm#3">Rom 9:3</a><br>
-<br>What clear foreshadowings of God's grace manifest toward us though Jesus Christ, who as our Mediator has stood between us and God and was willing to be forsaken of God, that He might deliver us from God's wrath toward us as sinners. <a href="psa22.htm#1">Psa 22:1</a>; <a href="mat27.htm#46">Mat 27:46</a>; <a href="rom5.htm#6">Rom 5:6-9</a><br>
-<br>If, like the Levites, we will separate ourselves unto the Lord, we may turn away His wrath from many, as messengers of grace and not [of] law. <a href="rom1.htm#16">Rom 1:16</a><br>
-<br><a href="ex33.htm#1" target="lwr_lt">Ex 33</a>. Because of Israel's sin, however, Jehovah said that His presence should not go with Moses, but that He would send an angel to guide them and bring them into the promised land. But the intercession of Moses prevailed, and the Lord went with them.<br>
-<br>The presence of the Lord in the wilderness was more to be desired than all the wealth of a land flowing with milk and honey, without His presence. ''In His presence'' is fulness of joy. [<a href="psa16.htm#11">Psa 16:11</a>]<br>
-<br><a href="ex34.htm#1" target="lwr_lt">Ex 34</a>. For Moses to behold the glory that was passing away resulted in a shining face. How much more to behold the glory of God revealed in the face of Jesus Christ, which glory is abiding. <a href="2cor3.htm#7">2Cor 3:7 to 4:6</a>
-</dl><br>
+<dl><dt><b>20 - Israel's Folly and Jehovah's Favor</b> (Exodus 32-34) - <br><dd>
+<a href="ex32.htm#1" target="lwr_lt">Ex 32</a>. To save idolatrous Israel from the wrath of the uncovered Law, Moses interceded for them in the presence of Jehovah, before he descended from the mount, and then he broke the tables of the Law as he came down from His presence.<p>
+Then Moses called for all who were on the Lord's side to come out to him, and all the sons of Levi gathered themselves together unto him, and turned away God's wrath from guilty Israel by slaying about three thousand men. <a href="num25.htm#10">Num 25:10-13</a>
+</p><p>
+The heart cry of Moses, as an intercessor, for Jehovah to forgive the sin of Israel, or blot out his name, because typical of Christ, resulted in God dealing with Israel on the ground of grace and not law. <a href="luk23.htm#34">Luke 23:34</a>; <a href="rom9.htm#3">Rom 9:3</a>
+</p><p>
+What clear foreshadowings of God's grace manifest toward us though Jesus Christ, who as our Mediator has stood between us and God and was willing to be forsaken of God, that He might deliver us from God's wrath toward us as sinners. <a href="psa22.htm#1">Psa 22:1</a>; <a href="mat27.htm#46">Mat 27:46</a>; <a href="rom5.htm#6">Rom 5:6-9</a>
+</p><p>
+If, like the Levites, we will separate ourselves unto the Lord, we may turn away His wrath from many, as messengers of grace and not [of] law. <a href="rom1.htm#16">Rom 1:16</a>
+</p><p>
+<a href="ex33.htm#1" target="lwr_lt">Ex 33</a>. Because of Israel's sin, however, Jehovah said that His presence should not go with Moses, but that He would send an angel to guide them and bring them into the promised land. But the intercession of Moses prevailed, and the Lord went with them.
+</p><p>
+The presence of the Lord in the wilderness was more to be desired than all the wealth of a land flowing with milk and honey, without His presence. ''In His presence'' is fulness of joy. [<a href="psa16.htm#11">Psa 16:11</a>]
+</p><p>
+<a href="ex34.htm#1" target="lwr_lt">Ex 34</a>. For Moses to behold the glory that was passing away resulted in a shining face. How much more to behold the glory of God revealed in the face of Jesus Christ, which glory is abiding. <a href="2cor3.htm#7">2Cor 3:7 to 4:6</a></p></dl>
 <center>Proceed to the next section of this study: <a href="tent-21.htm" target="upper"><b>21 - The Making &amp; Setting Up of the Tabernacle</b></a><br><br>Return to the <a href="tent_tc.htm" target="lwr_lt"><b>Table of Contents for this study on the Tabernacle.</b></a><br><br></center>
-</dl>
 <hr width=60% align=center size=1>
 <center>This study can be accessed under <b>Book Notes</b> at <b>Exodus</b> chapter 25.</center>
 <center>Go to <a href="go_bible.htm" target="_top"><b>The Book</b></a> opening page.</center>
