--- a/www/the_book/intro-03.htm
+++ b/www/the_book/intro-03.htm
@@ -8,16 +8,14 @@
 <center><h4>Chapter 3- Major Bible Themes: God</h4></center>
 <dl><dt>
 What has God revealed in His Word? A lifetime of study cannot fully answer this question. God's Word is inexhaustible. There is always more to discover. 
-But in essence, the Bible tells the story of humanity in relation to God. Major themes in this story include the character of God, the nature of Man, and the person of the Savior. There are other related themes. But let's begin with these.<br><br>
-<b>The Character of God-</b><br>
-<dd>To many people, the Bible seems to present two very different views of God. To them, the God of the OT appears to be angry &amp; vengeful, while the God of the NT is loving &amp; kind. Of course, this is a misunderstanding. God says of Himself: &quot;...I am the LORD. I change not...&quot; (<a href="mal3.htm#6">Mal 3:6</a>).<br><br>  
-Here are just a few of the things that God has revealed to us about Himself. Notice that the OT &amp; NT paint a consistent picture of Him as:   (Note: OT references below will display in the lower left window, NT in lower right.)
-<dl>
-<dt><b>-the Creator -</b>  <a href="gen1.htm#1" target="lwr_lt">Gen 1:1</a>, <a href="joh1.htm#1">Joh 1:1-4,14</a>
-<dt><b>-the Source of life -</b> <a href="gen2.htm#7" target="lwr_lt">Gen 2:7</a>, <a href="joh5.htm#26">Joh 5:26</a>
-<dt><b>-the Sustainer of creation-</b> <a href="psa102.htm#25" target="lwr_lt">Psa 102:25-27</a>, <a href="col1.htm#16">Col 1:16,17</a>
-<br>
-<dt><b>-Personal </b>(not just a force)-
+But in essence, the Bible tells the story of humanity in relation to God. Major themes in this story include the character of God, the nature of Man, and the person of the Savior. There are other related themes. But let's begin with these.<dt>&nbsp;
+<dt><b>The Character of God-</b>
+<dd>To many people, the Bible seems to present two very different views of God. To them, the God of the OT appears to be angry &amp; vengeful, while the God of the NT is loving &amp; kind. Of course, this is a misunderstanding. God says of Himself: &quot;...I am the LORD. I change not...&quot; (<a href="mal3.htm#6">Mal 3:6</a>).<dd>&nbsp; 
+<dd>Here are just a few of the things that God has revealed to us about Himself. Notice that the OT &amp; NT paint a consistent picture of Him as:<br>[Note: OT references below will display in the lower left window, NT in lower right.]<dl>
+<dt><b>- the Creator -</b>  <a href="gen1.htm#1" target="lwr_lt">Gen 1:1</a>, <a href="joh1.htm#1">Joh 1:1-4,14</a>
+<dt><b>- the Source of life -</b> <a href="gen2.htm#7" target="lwr_lt">Gen 2:7</a>, <a href="joh5.htm#26">Joh 5:26</a>
+<dt><b>- the Sustainer of creation-</b> <a href="psa102.htm#25" target="lwr_lt">Psa 102:25-27</a>, <a href="col1.htm#16">Col 1:16,17</a>
+<dt><b>- Personal </b>(not just a force)-
 <dd>He interacts with man.    <a href="gen2.htm#16" target="lwr_lt">Gen 2:16,17</a>, <a href="1the1.htm#9">1The 1:9</a>
 <dd>He makes Himself known.    <a href="num12.htm#6" target="lwr_lt">Num 12:6</a>, <a href="heb1.htm#1">Heb 1:1-3</a>
 <dd>It is essential that we know Him. <a href="jer9.htm#23" target="lwr_lt">Jer 9:23-26</a>, <a href="joh17.htm#3">Joh 17:3</a> 
@@ -27,14 +25,14 @@ Here are just a few of the things that God has revealed to us about Himself. Not
 <dd>joy -- <a href="zeph3.htm#17" target="lwr_lt">Zeph 3:17</a>, <a href="jude1.htm#24">Jude 1:24</a>
 <dd>grief - <a href="gen6.htm#6" target="lwr_lt">Gen 6:6</a>, <a href="eph4.htm#30">Eph 4:30</a></dl>
 <dd>Yet, unlike man, He is not limited (eg., by time or space).<dl>
-<dd><b>-Eternal-</b> <a href="psa90.htm#2" target="lwr_lt">Psa 90:2</a>; <a href="rom1.htm#20">Rom 1:20</a>
-<dd><b>-All knowing-</b> <a href="psa139.htm#1" target="lwr_lt">Psa 139:1-4</a>; <a href="joh2.htm#24">Joh 2:24</a>; <a href="heb4.htm#13">Heb 4:13</a>
-<dd><b>-Everywhere present-</b> <a href="psa139.htm#7" target="lwr_lt">Psa 139:7-12</a>; <a href="act17.htm#24">Acts 17:24-28</a></dl>
-<dt><b>-Holy </b>(totally separated from all that is evil)- <a href="lev11.htm#44" target="lwr_lt">Lev 11:44</a>; <a href="lev19.htm#2" target="lwr_lt">19:2</a>;  <a href="jam1.htm#13">Jam 1:13</a>
+<dd><b>- Eternal-</b> <a href="psa90.htm#2" target="lwr_lt">Psa 90:2</a>; <a href="rom1.htm#20">Rom 1:20</a>
+<dd><b>- All knowing-</b> <a href="psa139.htm#1" target="lwr_lt">Psa 139:1-4</a>; <a href="joh2.htm#24">Joh 2:24</a>; <a href="heb4.htm#13">Heb 4:13</a>
+<dd><b>- Everywhere present-</b> <a href="psa139.htm#7" target="lwr_lt">Psa 139:7-12</a>; <a href="act17.htm#24">Acts 17:24-28</a></dl>
+<dt><b>- Holy </b>(totally separated from all that is evil)- <a href="lev11.htm#44" target="lwr_lt">Lev 11:44</a>; <a href="lev19.htm#2" target="lwr_lt">19:2</a>;  <a href="jam1.htm#13">Jam 1:13</a>
 <dd>He is the standard of &quot;good&quot;.  <a href="gen1.htm#31" target="lwr_lt">Gen 1:31</a>;  <a href="mat19.htm#16">Mat 19:16,17</a>
 <dd>He is the standard of &quot;right&quot;. <a href="gen2.htm#16" target="lwr_lt">Gen 2:16,17</a>; <a href="luk6.htm#46">Luk 6:46</a> (cp. <a href="deu32.htm#4" target="lwr_lt">Deu 32:4</a>; <a href="psa11.htm#5" target="lwr_lt">Psa 11:5-7</a>; <a href="psa19.htm#8" target="lwr_lt">Psa 19:8,9</a>; <a href="rom7.htm#12">Rom 7:12</a>)
 <dd><a name="trinity"></a>
-<dt><b>-One God / Triune God-</b>
+<dt><b>- One God / Triune God-</b>
 <dd>In the OT, God reveals Himself as One God. Yet, His oneness is mysteriously plural.<ul>
 <li><b>Elohim</b>- The basic OT word for God is El. It can be used of God or of false gods. Almost always, when it refers to the true God, it is in the plural form &quot;Elohim&quot; (begining with the first verse in the Bible).  This is more than a literary way of expressing His greatness (via the 'plural of majesty'), since there is also an interrelation within the Deity. Notice the plural pronoun &quot;us&quot; in the following passages:
  <a href="gen1.htm#26" target="lwr_lt">Gen 1:26</a>,  <a href="gen3.htm#22" target="lwr_lt">3:22</a>; <a href="isa6.htm#8" target="lwr_lt">Isa 6:8</a>.
@@ -55,7 +53,7 @@ Here are just a few of the things that God has revealed to us about Himself. Not
 <li>The Holy Spirit - <a href="act5.htm#3">Acts 5:3,4</a>, <a href="joh16.htm#7">Joh 16:7-15</a> (cp. <a href="gen6.htm#3" target="lwr_lt">Gen 6:3</a>)</ul>
 <dd>Some NT passages speak of the three Persons at once (eg. <a href="mat3.htm#16">Mat 3:16,17</a>), as working together (<a href="2cor13.htm#14">2Cor 13:14</a>), or as one (eg. <a href="mat28.htm#19">Mat 28:19</a>; Note that &quot;name&quot; is singular but applies to all three). Yet, the NT ackowledges only one God. (<a href="1tim2.htm#5">1Tim 2:5</a>)<br>
 <dd>This picture is not foreign to the OT. (eg., <a href="isa48.htm#16" target="lwr_lt">Isa 48:16,17</a>; Observe that the One speaking, who has been sent by ''the Lord God and His Spirit'' is not Isaiah, for He clearly identifies Himself as the LORD, in <a href="isa48.htm#12" target="lwr_lt">v.12,13</a>.)</ul>
-<dt><b>-the God of Wrath / the God of Mercy-</b>
+<dt><b>- the God of Wrath / the God of Mercy-</b>
 <dd>Wrath and Mercy are not mutually exclusive. The Holy God must judge sin. Because He is longsuffering, judgment may be delayed (ie., God may hold back His wrath), but it will come. In His Mercy, God makes a way of escape from judgment for His own people.
 <a href="ex34.htm#6" target="lwr_lt">Ex 34:6,7</a>; <a href="jer9.htm#23" target="lwr_lt">Jer 9:23-24</a>; <a href="lam3.htm#22" target="lwr_lt">Lam 3:22</a>; <a href="hab3.htm#2" target="lwr_lt">Hab 3:2</a>; <a href="rom9.htm#15">Rom 9:15-18</a>
 <dd>Some examples of God's mercy in the midst of His wrath:<dl>
