--- a/www/the_book/tent-21.htm
+++ b/www/the_book/tent-21.htm
@@ -4,16 +4,18 @@
 <base target="lwr_rt"></head>
 <body bgcolor="#ffff80">
 <center><h2>Christ in the Tabernacle</h2></center>
-<dl>
-<dt><b>21(a) - The Making of the Tabernacle</b> (<a href="ex35.htm#1" target="lwr_lt">Exodus 35 - 39</a>) - <br><dd>
-<b>Every willing-hearted </b>Israelite had a blessed part in furnishing the material for the Tabernacle, and every wise-hearted worker had part in making it, under the direction of Bezaleel and Oholiab.<br>
-<br>Every part of the Tabernacle was made according to the heavenly and divine pattern, that it might please Him who planned it and who was about to dwell in it.<br>
-<br>Every willing-hearted and wise-hearted child of God today may have part in building God's house, His Church, as guided and used by the Holy Spirit and the word of God.<br>
-<br>Every part of God's building is being fashioned according to the heavenly pattern, for every member of His Church is being conformed to the image of His Son. <a href="rom8.htm#29">Rom 8:29</a>; <a href="2cor3.htm#18">2Cor 3:18</a><br>
+<dl><dt><b>21(a) - The Making of the Tabernacle</b> (<a href="ex35.htm#1" target="lwr_lt">Exodus 35 - 39</a>) - <br><dd>
+<b>Every willing-hearted </b>Israelite had a blessed part in furnishing the material for the Tabernacle, and every wise-hearted worker had part in making it, under the direction of Bezaleel and Oholiab.<p>
+Every part of the Tabernacle was made according to the heavenly and divine pattern, that it might please Him who planned it and who was about to dwell in it.
+</p><p>
+Every willing-hearted and wise-hearted child of God today may have part in building God's house, His Church, as guided and used by the Holy Spirit and the word of God.
+</p><p>
+Every part of God's building is being fashioned according to the heavenly pattern, for every member of His Church is being conformed to the image of His Son. <a href="rom8.htm#29">Rom 8:29</a>; <a href="2cor3.htm#18">2Cor 3:18</a></p>
 <dt><b>21(b)- The Setting Up of the Tabernacle</b><dd>
-<a href="ex40.htm#1" target="lwr_lt">Exodus 40</a>. When the parts of the Tabernacle were all fitted for their places, Moses, a type of Christ, set it up, putting every part in its proper place. Then the cloud, the symbol of God's presence and glory, filled the Tabernacle.<br>
-<br>The Lord Jesus Christ, and not men, is adding to the Church daily those who are being saved. (<a href="act2.htm#47">Acts 2:47</a>) As every member occupies God's appointed place in His house, as a yielded vessel, His Holy Spirit fills the house and manifests His glorious presence.<br>
-<br>But, when the Lord, by His Spirit and word has called out and completed the Church, His body, He will place each member in God's appointed place in glory, and His own glorious presence will forever fill it.
+<a href="ex40.htm#1" target="lwr_lt">Exodus 40</a>. When the parts of the Tabernacle were all fitted for their places, Moses, a type of Christ, set it up, putting every part in its proper place. Then the cloud, the symbol of God's presence and glory, filled the Tabernacle.<p>
+The Lord Jesus Christ, and not men, is adding to the Church daily those who are being saved. (<a href="act2.htm#47">Acts 2:47</a>) As every member occupies God's appointed place in His house, as a yielded vessel, His Holy Spirit fills the house and manifests His glorious presence.
+</p><p>
+But, when the Lord, by His Spirit and word has called out and completed the Church, His body, He will place each member in God's appointed place in glory, and His own glorious presence will forever fill it.</p>
 <blockquote><dt>''O Christ! We'll spend eternal days
 <dd>Within the marvelous range,
 <dt>Of Thy glad presence and shall praise
@@ -42,10 +44,9 @@
 <li><b>A Sword </b>to give us victory over Satan.   <a href="eph6.htm#17">Eph 6:17</a>; <a href="heb4.htm#12">Heb 4:12</a>; <a href="jam4.htm#7">Jam 4:7</a>; <a href="1pet5.htm#8">1Pet 5:8,9</a>
 <li><b>A Fire, and</b>
 <li><b>a Hammer </b>to equip us as workers to convict and to break stony hearts, and to warm and build up believers. <a href="jer23.htm#29">Jer 23:29</a>; <a href="luk24.htm#32">Luk 24:32</a>; <a href="1pet2.htm#5">1Pet 2:5</a>; <a href="1pet4.htm#8">4:8</a>
-<li><b>Seed </b>to beget souls. <a href="mat13.htm#1">Mat 13:1-32</a>; <a href="jam1.htm#18">Jam 1:18</a>; <a href="1pet1.htm#23">1Pet 1:23</a>; <a href="psa126.htm#6">Psa 126:6</a></ol>
-</dl><hr width=50% align=center size=1>
+<li><b>Seed </b>to beget souls. <a href="mat13.htm#1">Mat 13:1-32</a>; <a href="jam1.htm#18">Jam 1:18</a>; <a href="1pet1.htm#23">1Pet 1:23</a>; <a href="psa126.htm#6">Psa 126:6</a></ol></dl>
+<hr width=50% align=center size=1>
 <center>This concludes the study of ''Christ in the Tabernacle''.<br><br>Return to the <a href="tent_tc.htm" target="lwr_lt"><b>Table of Contents for this study on the Tabernacle.</b></a><br><br>Click here to return to the <a href="ex_menu.htm#ex25" target="lwr_lt"><i>Book Notes</i> at Exodus 25</a>.</center>
-</dl>
 <hr width=60% align=center size=1>
 <center>This study can be accessed under <b>Book Notes</b> at <b>Exodus</b> chapter 25.</center>
 <center>Go to <a href="go_bible.htm" target="_top"><b>The Book</b></a> opening page.</center>
